turtleart.square.Square.scala.error
Compilation error:
Square:1: error: identifier expected but ')' found.
override def run() {avance(200);droite(90);avance(200.);droite(90);avance(200);droite(90);avance(200);droite(90)} 
                                                      ^